...
      />

      <Tab.Screen
        name='CreateUserScreen'
        component={CreateUserScreen}
        options={{
          tabBarTestID: 'tab-create-user',
          tabBarIcon: ({color, size}) => (
            <FontAwesome name="user-plus" size={size} color={color} />
          ),
        }}
      />

...
